Wording changes: editions become sessions

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,8 +19,8 @@
 <a id="concept"></a>
 @@include('./includes/sections/concept.html')
 
-<a id="editions"></a>
-@@include('./includes/sections/editions.html')
+<a id="sessions"></a>
+@@include('./includes/sections/sessions.html')
 
 <a id="contact"></a>
 @@include('./includes/sections/contact.html')
